# whale-anthropic-hackathon-alma

./: .env.example  .gitignore  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  (+1 more)
backend/: .env.example  Dockerfile.worker  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
backend/admin/: package.json
backend/admin/src/app/: globals.css  layout.tsx  page.tsx
backend/admin/src/components/: sidebar.tsx
backend/data/patients/Lukas/: hot-moments.md  timeline.jsonl
backend/data/patients/anna/: care-preferences.md  hot-moments.md  personhood.md  signals.md  social-network.md  timeline.jsonl
backend/data/patients/annelies-vanloon/: care-preferences.md  hot-moments.md  personhood.md  social-network.md
backend/data/patients/beatrix-hoogendijk/: care-preferences.md  hot-moments.md  personhood.md  social-network.md
backend/data/patients/bram-deboer/: care-preferences.md  hot-moments.md  personhood.md  social-network.md
backend/dynamicconfig/: development-sql.yaml
backend/src/care_passport/: activities.py  api.py  config.py  entities.py  memory.py  worker.py  workflow.py
backend/tests/: conftest.py  test_activities.py  test_api.py  test_auth.py  test_markdown_store.py  test_smoke.py  test_updates.py  test_workflow.py
backend/tests/journey/: common.yaml  test_phase1_create.tavern.yaml  test_phase2_onboarding.tavern.yaml  test_phase3_conversations.tavern.yaml  test_phase4_caretaker_retrieval.tavern.yaml  test_phase5_hot_moments.tavern.yaml  test_phase6_cleanup.tavern.yaml
(+224 files in other folders)
