[project]
name = "care-passport"
version = "0.1.0"
description = "WhatsApp voice companion that builds an evidence-backed knowledge graph per patient"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "graphiti-core[anthropic,kuzu,voyageai]>=0.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "temporalio>=1.7.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/care_passport"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not journey'"
markers = [
    "journey: end-to-end Tavern suite that requires a live `make up` stack",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "tavern>=3.3.3",
]
